new fonts + header settings

--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -20,7 +20,7 @@
         <div class="nav__contacts">
           <div class="nav__wrap-tel">
             <img class="nav__icon-tel" src="@img/phone.svg" alt="" />
-            <div class="nav__item__wrap">
+            <div class="nav__item-wrap">
               <a href="tel:+74951518763" class="nav__phone">
                 +7 (495) 151-87-63
               </a>
@@ -28,7 +28,7 @@
               ><span class="nav__span"> Сб. - Вс.: 09.00-21.00</span>
             </div>
           </div>
-          <button class="nav__button">Быстрый заказ</button>
+          <button class="nav__button main__button">Быстрый заказ</button>
         </div>
       </div>
 
