--- a/src/html/_header.htm
+++ b/src/html/_header.htm
@@ -2,8 +2,8 @@
   <div class="header__container">
     <header class="header" id="top">
       <div class="header__nav nav">
-        <img class="logo" src="@img/logo.svg" alt="logo" />
-        <ul class="nav__list">
+        <img class="logos" src="@img/logo.svg" alt="logo" />
+        <ul class="nav__list menu">
           <li class="nav__item">
             <a class="nav__link" href="#discounts">Новым клиентам</a>
           </li>
