--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,9 @@
   <body>
     <div class="wrapper">
       @@include('html/_header.htm',{})
-      <main class="page"></main>
+      <main class="page">
+        @@include('html/_page.htm',{})
+      </main>
       @@include('html/_footer.htm',{})
     </div>
     @@include('html/_popup.htm',{}) @@include('html/_js.htm',{})
