--- a/src/html/_footer.htm
+++ b/src/html/_footer.htm
@@ -1,4 +1,42 @@
 <footer class="footer">
-	<div class="footer__container">
-	</div>
+  <div class="footer__container">
+    <div class="footer__wrapper">
+      <div class="footer__wrap">
+        <a href="#top"
+          ><img src="@img/logo.svg" alt="" class="footer__logo"
+        /></a>
+        <p class="footer__text">© Eden Springs 2022г.</p>
+        <a href="#" class="footer__link">Политика конфиденциальности</a>
+      </div>
+      <div class="footer__wrap">
+        <ul class="footer__list footer__list_center">
+          <li class="footer__item">
+            <a class="footer__link" href="tel:+74951518763" class="nav__phone"
+              >+7 (495) 151-87-63</a
+            >
+          </li>
+          <li class="footer__item">
+            <a class="footer__link" href="info@edensprings.ru"
+              >info@edensprings.ru</a
+            >
+          </li>
+          <li class="footer__item">
+            <img
+              class="footer__icon"
+              src="@img/icon-VK.svg"
+              alt="VK"
+            />
+          </li>
+        </ul>
+      </div>
+      <div class="footer__wrap">
+        <ul class="footer__list footer__list_right">
+          <li class="footer__item">Пн.- Пт.: 08.00-21.00</li>
+          <li class="footer__item">Сб. - Вс.: 09.00-21.00</li>
+          <li class="footer__item">МО, Домодедовский район,</li>
+          <li class="footer__item">г. Домодедово, Каширское ш., д. 19.</li>
+        </ul>
+      </div>
+    </div>
+  </div>
 </footer>
