--- a/src/html/_page.htm
+++ b/src/html/_page.htm
@@ -207,11 +207,14 @@
 </div>
 
 <section class="reviews">
-  <div class="container_second">
+  <div class="rev__container">
     <h2 class="reviews__title">Для нас важно ваше мнение о воде eden</h2>
-    <div class="slider__wrapper">
-      <div class="reviews__slider">
-        <div class="reviews__wrapper">
+    <!-- Оболочка слайдера -->
+    <div class="reviews__slider swiper">
+      <!-- Двигающееся часть слайдера -->
+      <div class="reviews__wrapper swiper-wrapper">
+        <!-- Слайд -->
+        <div class="reviews__slide swiper-slide">
           <div class="reviews__wrap">
             <p class="reviews__text_top">Эльвира Лазарева</p>
             <div class="reviews__rating-result rating-result">
@@ -229,9 +232,9 @@
             <span class="reviews__span">08.07.2022</span>
           </div>
         </div>
-        <div class="reviews__wrapper">
+        <div class="reviews__slide swiper-slide">
           <div class="reviews__wrap">
-            <p class="reviews__text_top">Юрий Балыков</p>
+            <p class="reviews__text_top">Эльвира Лазарева</p>
             <div class="reviews__rating-result rating-result">
               <span class="active"></span>
               <span class="active"></span>
@@ -247,9 +250,9 @@
             <span class="reviews__span">08.07.2022</span>
           </div>
         </div>
-        <div class="reviews__wrapper">
+        <div class="reviews__slide swiper-slide">
           <div class="reviews__wrap">
-            <p class="reviews__text_top">Юрий Балыков</p>
+            <p class="reviews__text_top">Эльвира Лазарева</p>
             <div class="reviews__rating-result rating-result">
               <span class="active"></span>
               <span class="active"></span>
@@ -265,9 +268,9 @@
             <span class="reviews__span">08.07.2022</span>
           </div>
         </div>
-        <div class="reviews__wrapper">
+        <div class="reviews__slide swiper-slide">
           <div class="reviews__wrap">
-            <p class="reviews__text_top">Ольга Черняева</p>
+            <p class="reviews__text_top">Эльвира Лазарева</p>
             <div class="reviews__rating-result rating-result">
               <span class="active"></span>
               <span class="active"></span>
@@ -284,133 +287,86 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
-</section>
-<section class="partners">
-  <div class="container_second">
-    <h2 class="partners__title title">Нам доверяют</h2>
 
-    <div class=".slider__wrapper">
-      <div class="partners__wrap slider">
-        <div class="partners__wrap__images">
-          <img
-            class="partners__wrap__img"
-            src="@img/mts.svg"
-            alt=""
-            class="partners__wrap__img"
-          />
-        </div>
-        <div class="partners__wrap__images">
-          <img
-            class="partners__wrap__img"
-            src="@img/tinkoff.svg"
-            alt=""
-            class="partners__wrap__img"
-          />
-        </div>
-        <div class="partners__wrap__images">
-          <img
-            class="partners__wrap__img"
-            src="@img/1.svg"
-            alt=""
-            class="partners__wrap__img"
-          />
-        </div>
-        <div class="partners__wrap__images">
-          <img
-            class="partners__wrap__img"
-            src="@img/1.svg"
-            alt=""
-            class="partners__wrap__img"
-          />
-        </div>
-        <div class="partners__wrap__images">
-          <img
-            class="partners__wrap__img"
-            src="@img/clinic.svg"
-            alt=""
-            class="partners__wrap__img"
-          />
-        </div>
-      </div>
+      <!-- Если нужна навигация (влево/вправо) -->
+      <button type="button" class="swiper-button-prev"></button>
+      <button type="button" class="swiper-button-next"></button>
     </div>
   </div>
 </section>
+
+<section class="partners">
+  <h2 class="reviews__title">Для нас важно ваше мнение о воде eden</h2>
+  <div class="partners__container">
+    <!-- Оболочка слайдера -->
+    <div class="partners__slider swiper">
+      <!-- Двигающееся часть слайдера -->
+      <div class="partners__wrapper swiper-wrapper">
+        <!-- Слайд -->
+        <div class="partners__slide swiper-slide">
+          <img src="@img/partn_1.png" alt="" />
+        </div>
+        <div class="partners__slide swiper-slide">
+          <img src="@img/partn_2.png" alt="" />
+        </div>
+        <div class="partners__slide swiper-slide">
+          <img src="@img/partn_3.png" alt="" />
+        </div>
+        <div class="partners__slide swiper-slide">
+          <img src="@img/partn_4.png" alt="" />
+        </div>
+        <div class="partners__slide swiper-slide">
+          <img src="@img/partn_2.png" alt="" />
+        </div>
+      </div>
+
+      <button type="button" class="swiper-button-prev"></button>
+      <button type="button" class="swiper-button-next"></button>
+    </div>
+  </div>
+</section>
+
 <section class="questions" id="questions">
-  <div class="container">
-    <h2 class="questions__title">Часто задаваемые вопросы</h2>
-    <div class="questions__wrapper">
-      <details class="questions__details">
-        <summary class="questions__summary">
-          <div class="questions__wrap">
-            Что входит в состав воды Eden Springs?
-            <img
-              class="questions__img"
-              src="@img/arrow.svg"
-              alt=""
-            />
-          </div>
-        </summary>
-        <p class="questions__details__text">
+  <h2 class="reviews__title">Часто задаваемые вопросы</h2>
+  <div class="questions__container">
+    <ul class="questions__list" data-spollers data-spollers-speed="300">
+      <li class="questions__item">
+        <div class="questions__prev" data-spoller>
+          Что входит в состав воды Eden Springs?
+        </div>
+        <div class="questions__text">
           Наша вода обладает сбалансированным составом минералов и
           микроэлементов. Пить ее можно и нужно каждый день. Основные
           компоненты: Гидрокарбонаты 20-150 мг/л; Хлориды 35-150 мг/л; Сульфаты
           0-1 мг/л; Натрий 5-50 мг/л; Кальций 10-40 мг/л; Калий 5-20 мг/л;
-          Магний 2-15 мг/л. Что входит в состав воды Eden Springs?
-        </p>
-      </details>
-      <details class="questions__details">
-        <summary class="questions__summary">
-          <div class="questions__wrap">
-            Сколько стоит вода?
-            <img
-              class="questions__img"
-              src="@img/arrow.svg"
-              alt=""
-            />
-          </div>
-        </summary>
-        <p class="questions__details__text">
+          Магний 2-15 мг/л.
+        </div>
+      </li>
+      <li class="questions__item">
+        <div class="questions__prev" data-spoller>Сколько стоит вода?</div>
+        <div class="questions__text">
           При первом заказе: вода + механическая помпа - бесплатно*. Минимальный
           заказ - 2 бутыли. Со второго заказа: цена 1 бутыли* воды (19л) -
           298.80 руб/ бутыль при заказе 2-5 бутылей и 264 руб/ бутыль при заказе
           6-10 бутылей. *За каждую бутыль взимается возвратный залог в 350 руб.
           Стоимость доставки при заказе менее 3-х бутылей - 80 руб.
-        </p>
-      </details>
-      <details class="questions__details">
-        <summary class="questions__summary">
-          <div class="questions__wrap">
-            Как оформить заявку на доставку воды?
-            <img
-              class="questions__img"
-              src="@img/arrow.svg"
-              alt=""
-            />
-          </div>
-        </summary>
-        <p class="questions__details__text">
+        </div>
+      </li>
+      <li class="questions__item">
+        <div class="questions__prev" data-spoller>
+          Как оформить заявку на доставку воды?
+        </div>
+        <div class="questions__text">
           Заполните заявку на нашем сайте или позвоните в колл-центр по номеру
-          телефона
-          <a href="tel:+74951518763" class="questions__phone"
-            >+7 (495) 151-87-63</a
-          >, наши менеджеры проконсультируют вас и подберут наиболее выгодное
-          предложение.
-        </p>
-      </details>
-      <details class="questions__details">
-        <summary class="questions__summary">
-          <div class="questions__wrap">
-            Что значит возвратный залог за бутыли?
-            <img
-              class="questions__img"
-              src="@img/arrow.svg"
-              alt=""
-            />
-          </div>
-        </summary>
-        <p class="questions__details__text">
+          телефона +7 (495) 151-8763, наши менеджеры проконсультируют вас и
+          подберут наиболее выгодное предложение.
+        </div>
+      </li>
+      <li class="questions__item">
+        <div class="questions__prev" data-spoller>
+          Что значит возвратный залог за бутыли?
+        </div>
+        <div class="questions__text">
           Возвратный залог - это единоразовый взнос за тару при первом заказе -
           350 руб. за каждую бутыль 19л. При последующей доставке воды мы
           обмениваем пустые бутыли на полные из расчета один к одному. Наши
@@ -419,45 +375,32 @@
           важно для экологии и выгодно для клиентов. Отсюда - возвратный залог.
           В случае отказа от повторного заказа воды наш курьер приедет, заберет
           пустые бутыли и мы вернем ваш залог за тару.
-        </p>
-      </details>
-      <details class="questions__details">
-        <summary class="questions__summary">
-          <div class="questions__wrap">
-            Возможно ли заказать воду в офис?
-            <img
-              class="questions__img"
-              src="@img/arrow.svg"
-              alt=""
-            />
-          </div>
-        </summary>
-        <p class="questions__details__text">
+        </div>
+      </li>
+      <li class="questions__item">
+        <div class="questions__prev" data-spoller>
+          Возможно ли заказать воду в офис?
+        </div>
+        <div class="questions__text">
           Заказать воду в офис можно в несколько простых шагов. Оформите заявку
           на заказ через юридическое лицо и укажите количество сотрудников - мы
           подберем оптимальный объем бутылей для вашего офиса.
-        </p>
-      </details>
-      <details class="questions__details">
-        <summary class="questions__summary">
-          <div class="questions__wrap">
-            В каких случаях помпа - в подарок?
-            <img
-              class="questions__img"
-              src="@img/arrow.svg"
-              alt=""
-            />
-          </div>
-        </summary>
-        <p class="questions__details__text">
+        </div>
+      </li>
+      <li class="questions__item">
+        <div class="questions__prev" data-spoller>
+          В каких случаях помпа - в подарок?
+        </div>
+        <div class="questions__text">
           Механическая помпа в подарок - действующая акция для новых клиентов
           Eden Springs. Предложение действует на первый заказ от 2-х бутылей
           воды.
-        </p>
-      </details>
-    </div>
+        </div>
+      </li>
+    </ul>
   </div>
 </section>
+
 <div class="wave__background_second">
   <section class="order">
     <div class="container">
@@ -489,11 +432,7 @@
         </h2>
         <div class="qualities__blocks">
           <div class="qualities__wrap">
-            <img
-              src="@img/microscope.svg"
-              alt=""
-              class="qualities__img"
-            />
+            <img src="@img/microscope.svg" alt="" class="qualities__img" />
             <div class="qualities__block">
               <h5 class="qualities__subtitle">Эксперты лаборатории</h5>
               <p class="qualities__text">
@@ -503,11 +442,7 @@
             </div>
           </div>
           <div class="qualities__wrap">
-            <img
-              src="@img/steps.svg"
-              alt=""
-              class="qualities__img"
-            />
+            <img src="@img/steps.svg" alt="" class="qualities__img" />
             <div class="qualities__block">
               <h5 class="qualities__subtitle">11 ступеней очистки</h5>
               <p class="qualities__text">
@@ -516,11 +451,7 @@
             </div>
           </div>
           <div class="qualities__wrap">
-            <img
-              src="@img/icon-bottle.svg"
-              alt=""
-              class="qualities__img"
-            />
+            <img src="@img/icon-bottle.svg" alt="" class="qualities__img" />
             <div class="qualities__block">
               <h5 class="qualities__subtitle">Бутыли из поликарбоната</h5>
               <p class="qualities__text">
@@ -530,11 +461,7 @@
             </div>
           </div>
           <div class="qualities__wrap">
-            <img
-              src="@img/certificate.svg"
-              alt=""
-              class="qualities__img"
-            />
+            <img src="@img/certificate.svg" alt="" class="qualities__img" />
             <div class="qualities__block">
               <h5 class="qualities__subtitle">Сертификация</h5>
               <p class="qualities__text">
