--- a/src/html/_page.htm
+++ b/src/html/_page.htm
@@ -12,7 +12,7 @@
           ><br />
           <span class="mainn__title_orange">БЕСПЛАТНО!</span>
         </h1>
-        <button class="mainn__button main__button">ЗАКАЗАТЬ ВОДУ</button>
+        <a href="#request" class="mainn__button main__button">ЗАКАЗАТЬ ВОДУ</a>
       </div>
       <div class="mainn__image">
         <img class="mainn__img" src="@img/main.png" alt="" />
@@ -101,7 +101,7 @@
 </section>
 
 <div class="wave_background">
-  <section class="request">
+  <section class="request" id="request">
     <div class="request__background">
       <div class="container">
         <h2 class="request__title">Оставьте заявку</h2>
@@ -212,7 +212,7 @@
     <!-- Оболочка слайдера -->
     <div class="reviews__slider swiper">
       <!-- Двигающееся часть слайдера -->
-      <div class="reviews__wrapper swiper-wrapper">
+      <div class="reviews__wrapper swiper-wrapper svh">
         <!-- Слайд -->
         <div class="reviews__slide swiper-slide">
           <div class="reviews__wrap">
@@ -301,7 +301,7 @@
     <!-- Оболочка слайдера -->
     <div class="partners__slider swiper">
       <!-- Двигающееся часть слайдера -->
-      <div class="partners__wrapper swiper-wrapper">
+      <div class="partners__wrapper swiper-wrapper svhh">
         <!-- Слайд -->
         <div class="partners__slide swiper-slide">
           <img src="@img/partn_1.png" alt="" />
