--- a/src/html/_page.htm
+++ b/src/html/_page.htm
@@ -539,7 +539,7 @@
   </div>
 </section>
 <section class="production">
-  <div class="container">
+  <div class="production__container">
     <h2 class="production__title title">
       Eden Springs - международный производитель и лидер по качеству воды в
       Европе
