--- a/src/html/_page.htm
+++ b/src/html/_page.htm
@@ -30,6 +30,11 @@
     <div class="benefits__wrapper">
       <div class="benefits__wrap">
         <h3 class="benefits__wrap__subtitle">БАЛАНС МИНЕРАЛОВ</h3>
+        <p>
+          Благодаря своему составу, в который входят полезные минералы и
+          микроэлементы: калий, магний и кальций, вода оптимальна для
+          ежедневного питья.
+        </p>
       </div>
       <div class="benefits__wrap_round">
         <img
@@ -40,15 +45,32 @@
       </div>
       <div class="benefits__wrap">
         <h3 class="benefits__wrap__subtitle">СТАБИЛЬНЫЙ СОСТАВ</h3>
+        <p>
+          Сбалансированный состав воды влияет на ее вкус - вода Eden
+          по-настоящему освежает и ее всегда приятно пить
+        </p>
       </div>
       <div class="benefits__wrap">
         <h3 class="benefits__wrap__subtitle">УДОБНАЯ ДОСТАВКА</h3>
+        <p>
+          Пить воду регулярно - важно для здоровья. Больше не нужно беспокоиться
+          о наличии питьевой воды дома. Мы доставляем заказ на следующий день
+          прямо до порога - удобно и просто.
+        </p>
       </div>
       <div class="benefits__wrap">
         <h3 class="benefits__wrap__subtitle">ПРИЯТНЫЙ ВКУС</h3>
+        <p>
+          Бонус стабильного минерального состава - неизменный вкус чая, кофе и
+          других напитков.
+        </p>
       </div>
       <div class="benefits__wrap">
         <h3 class="benefits__wrap__subtitle">ИДЕАЛЬНАЯ ПИТЬЕВАЯ ВОДА</h3>
+        <p>
+          Качество и безопасность воды Eden Springs подтверждены исследованиями
+          в европейских лабораториях и сертификатами качества.
+        </p>
       </div>
     </div>
   </div>
@@ -583,7 +605,7 @@
         placeholder="Номер телефона"
       />
       <input type="text" class="production__input" placeholder="Ваше имя" />
-      <button class="production__btn">Заказать Воду</button>
+      <button class="production__btn">Оставить заявку</button>
     </form>
   </div>
 </section>
