--- a/src/html/_page.htm
+++ b/src/html/_page.htm
@@ -23,7 +23,7 @@
 
 <section class="benefits" id="benefits">
   <div class="benefits__container">
-    <h2 class="benefits__title title">Почему стоит выбрать воду eden</h2>
+    <h2 class="benefits__title title">Почему стоит выбрать воду Eden</h2>
     <p class="benefits__text">
       В основе нашего производства - качество воды и технологичность процессов
     </p>
@@ -196,7 +196,7 @@
   </section>
   <div class="wave_backg">
     <section class="service">
-      <div class="container">
+      <div class="service__container">
         <h2 class="service__title">
           Простой и удобный сервис заказа доставки воды
         </h2>
@@ -318,7 +318,7 @@
 </section>
 
 <section class="partners">
-  <h2 class="reviews__title">Для нас важно ваше мнение о воде eden</h2>
+  <h2 class="reviews__title">Нам доверяют</h2>
   <div class="partners__container">
     <!-- Оболочка слайдера -->
     <div class="partners__slider swiper">
@@ -341,9 +341,10 @@
           <img src="@img/partn_2.png" alt="" />
         </div>
       </div>
-
-      <button type="button" class="swiper-button-prev"></button>
-      <button type="button" class="swiper-button-next"></button>
+      <div class="swiper-navigation">
+        <button type="button" class="swiper-button-prev"></button>
+        <button type="button" class="swiper-button-next"></button>
+      </div>
     </div>
   </div>
 </section>
