--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                     <a class="nav__link" href="#benefits">Преимущества</a>
                   </li>
                   <li class="nav__item">
-                    <a class="nav__link" href="#discounts">Aкции</a>
+                    <a class="nav__link" href="#disco">Aкции</a>
                   </li>
                   <li class="nav__item">
                     <a class="nav__link" href="#questions">Вопросы</a>
@@ -168,7 +168,7 @@
         </div>
       </div>
     </section>
-    <section class="discounts">
+    <section class="discounts" id="disco">
       <div class="container_second">
         <h2 class="discounts__title">Еще больше выгоды для новых клиентов</h2>
         <div class="discounts__blocks">
@@ -711,8 +711,6 @@
                 >
               </label>
             </form>
-            
-            
           </div>
         </div>
       </section>
@@ -965,7 +963,7 @@
         </div>
       </div>
     </footer>
-    <script src="./../../assets/js/script.js"></script>
+    <script src="assets/js/script.js"></script>
     <script
       type="text/javascript"
       src="https://code.jquery.com/jquery-1.11.0.min.js"
