--- a/src/index.html
+++ b/src/index.html
@@ -813,6 +813,7 @@
                     class="certificates__block__img"
                     src="./assets/images/attestation2.svg"
                     alt=""
+                    style="opacity: 0.5"
                   />
                 </div>
               </div>
@@ -843,6 +844,7 @@
                     class="certificates__block__img"
                     src="./assets/images/attestation1.svg"
                     alt=""
+                    style="opacity: 0.5"
                   />
                   <img
                     class="certificates__block__img"
