--- a/src/index.html
+++ b/src/index.html
@@ -178,9 +178,9 @@
                 <h4 class="discounts__wrap__subtitle">Бесплатно</h4>
                 <p class="discounts__wrap__text">2 бутыли воды</p>
                 <p class="discounts__wrap__text">+ механическая помпа *</p>
-                <a href="#request"
-                  ><button class="discounts__wrap__button">ЗАКАЗАТЬ</button></a
-                >
+                <a href="#request">
+                  <button class="discounts__wrap__button">ЗАКАЗАТЬ</button>
+                </a>
               </div>
             </div>
           </div>
@@ -192,9 +192,9 @@
                 <p class="discounts__wrap__text">
                   Доставка и вода - бесплатно от 3-х бутылей *
                 </p>
-                <a href="#request"
-                  ><button class="discounts__wrap__button">ЗАКАЗАТЬ</button></a
-                >
+                <a href="#request">
+                  <button class="discounts__wrap__button">ЗАКАЗАТЬ</button>
+                </a>
               </div>
             </div>
           </div>
@@ -206,9 +206,9 @@
                 <p class="discounts__wrap__text">
                   Вода и доставка - бесплатно от 3-х бутылей *
                 </p>
-                <a href="#request"
-                  ><button class="discounts__wrap__button">ЗАКАЗАТЬ</button></a
-                >
+                <a href="#request">
+                  <button class="discounts__wrap__button">ЗАКАЗАТЬ</button>
+                </a>
               </div>
             </div>
           </div>
