--- a/src/index.html
+++ b/src/index.html
@@ -238,7 +238,7 @@
                     class="request__input"
                     placeholder="Номер телефона"
                   />
-                  <button class="request__btn">Заказать Воду</button>
+                  <button class="request__btn">ЗАКАЗАТЬ ВОДУ</button>
                 </form>
                 <div action="" class="request__form_second">
                   <label>
@@ -291,7 +291,7 @@
                     >
                   </label>
 
-                  <button class="request__btn">Заказать Воду</button>
+                  <button class="request__btn">ЗАКАЗАТЬ ВОДУ</button>
                 </form>
                 <form action="" class="request__form-mobile two">
                   <input type="text" class="request__input" placeholder="ФИО" />
@@ -336,7 +336,7 @@
                     >
                   </label>
 
-                  <button class="request__btn">Заказать Воду</button>
+                  <button class="request__btn">ЗАКАЗАТЬ ВОДУ</button>
                 </form>
               </div>
             </div>
@@ -700,7 +700,7 @@
                 class="order__input"
                 placeholder="Номер телефона"
               />
-              <button class="production__btn">Заказать Воду</button>
+              <button class="production__btn">ЗАКАЗАТЬ ВОДУ</button>
             </form>
             <form action="" class="order__form_second">
               <label>
