--- a/src/index.html
+++ b/src/index.html
@@ -178,9 +178,9 @@
                 <h4 class="discounts__wrap__subtitle">Бесплатно</h4>
                 <p class="discounts__wrap__text">2 бутыли воды</p>
                 <p class="discounts__wrap__text">+ механическая помпа *</p>
-                <a href="#request">
-                  <button class="discounts__wrap__button">ЗАКАЗАТЬ</button>
-                </a>
+                <a href="#request"
+                  ><button class="discounts__wrap__button">ЗАКАЗАТЬ</button></a
+                >
               </div>
             </div>
           </div>
@@ -192,9 +192,9 @@
                 <p class="discounts__wrap__text">
                   Доставка и вода - бесплатно от 3-х бутылей *
                 </p>
-                <a href="#request">
-                  <button class="discounts__wrap__button">ЗАКАЗАТЬ</button>
-                </a>
+                <a href="#request"
+                  ><button class="discounts__wrap__button">ЗАКАЗАТЬ</button></a
+                >
               </div>
             </div>
           </div>
@@ -206,9 +206,9 @@
                 <p class="discounts__wrap__text">
                   Вода и доставка - бесплатно от 3-х бутылей *
                 </p>
-                <a href="#request">
-                  <button class="discounts__wrap__button">ЗАКАЗАТЬ</button>
-                </a>
+                <a href="#request"
+                  ><button class="discounts__wrap__button">ЗАКАЗАТЬ</button></a
+                >
               </div>
             </div>
           </div>
@@ -255,11 +255,11 @@
               </div>
               <div class="mobile">
                 <div class="mobile__wrap">
-                  <botton class="mobile__BTNtext">Заказать домой</botton>
-                  <botton class="mobile__BTNtext two">Заказать в офис</botton>
+                  <botton class="mobile__BTNtext">ЗАКАЗАТЬ ДОМОЙ</botton>
+                  <botton class="mobile__BTNtext two">ЗАКАЗАТЬ В ОФИС</botton>
                 </div>
 
-                <form action="" class="request__form-mobile active">
+                <form action="" class="request__form-mobile">
                   <input type="text" class="request__input" placeholder="Имя" />
                   <input
                     type="tel"
@@ -813,7 +813,6 @@
                     class="certificates__block__img"
                     src="./assets/images/attestation2.svg"
                     alt=""
-                    style="opacity: 0.5"
                   />
                 </div>
               </div>
@@ -822,7 +821,7 @@
           <div class="certificates__wrapper">
             <div class="certificates__wrapper_left">
               <h2 class="certificates__title">
-                МЕЖДУНАРОДНЫЙ СЕРТИФИКАТ КАЧЕСТВА ПРОДУКЦИИ FSSC 22000
+                FООD SAFETY SYSYTEM CERTIFICATION ISO 14001:2015
               </h2>
               <p class="certificates__text">
                 Сертификат содержит критерии к системам менеджмента окружающей
@@ -844,7 +843,6 @@
                     class="certificates__block__img"
                     src="./assets/images/attestation1.svg"
                     alt=""
-                    style="opacity: 0.5"
                   />
                   <img
                     class="certificates__block__img"
