--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,7 @@
               ><br />
               <span class="main__title_orange">БЕСПЛАТНО!</span>
             </h1>
-            <button class="main__button">ЗАКАЗАТЬ ВОДУ</button>
+            <a href="#request"><button class="main__button">ЗАКАЗАТЬ ВОДУ</button></a>
           </div>
           <div class="main__image">
             <img class="main__img" src="./assets/images/main.png" alt="" />
