fix form delete func

--- a/src/index.html
+++ b/src/index.html
@@ -259,7 +259,7 @@
                   <botton class="mobile__BTNtext two">ЗАКАЗАТЬ В ОФИС</botton>
                 </div>
 
-                <form action="" class="request__form-mobile">
+                <form action="" class="request__form-mobile active">
                   <input type="text" class="request__input" placeholder="Имя" />
                   <input
                     type="tel"
