--- a/src/index.html
+++ b/src/index.html
@@ -890,6 +890,7 @@
           autoplay
           muted
           controls
+          loop
         ></video>
         <div class="production__container">
           <h5 class="production__subtitle">
