--- a/src/index.html
+++ b/src/index.html
@@ -522,6 +522,38 @@
             <div class="partners__wrap__images">
               <img
                 class="partners__wrap__img"
+                src="./assets/images/microscope.svg"
+                alt=""
+                class="partners__wrap__img"
+              />
+            </div>
+            <div class="partners__wrap__images">
+              <img
+                class="partners__wrap__img"
+                src="./assets/images/tinkoff.svg"
+                alt=""
+                class="partners__wrap__img"
+              />
+            </div>
+            <div class="partners__wrap__images">
+              <img
+                class="partners__wrap__img"
+                src="./assets/images/1.svg"
+                alt=""
+                class="partners__wrap__img"
+              />
+            </div>
+            <div class="partners__wrap__images">
+              <img
+                class="partners__wrap__img"
+                src="./assets/images/mts.svg"
+                alt=""
+                class="partners__wrap__img"
+              />
+            </div>
+            <div class="partners__wrap__images">
+              <img
+                class="partners__wrap__img"
                 src="./assets/images/partners/1.svg"
                 alt=""
                 class="partners__wrap__img"
