--- a/src/index.html
+++ b/src/index.html
@@ -522,7 +522,7 @@
             <div class="partners__wrap__images">
               <img
                 class="partners__wrap__img"
-                src="./assets/images/microscope.svg"
+                src="./assets/images/medci.svg"
                 alt=""
                 class="partners__wrap__img"
               />
@@ -732,10 +732,18 @@
                 class="order__input"
                 placeholder="Номер телефона"
               />
+
+              <label class="order__wrapper__first">
+                <input type="checkbox" name="radio" />
+                <span class="order__form__text"
+                  >Я подтверждаю свое согласие на обработку персональных
+                  данных</span
+                >
+              </label>
               <button class="production__btn">ЗАКАЗАТЬ ВОДУ</button>
             </form>
             <form action="" class="order__form_second">
-              <label>
+              <label class="order__wrapper__second">
                 <input type="checkbox" name="radio" />
                 <span class="order__form__text"
                   >Я подтверждаю свое согласие на обработку персональных
