--- a/src/index.html
+++ b/src/index.html
@@ -1040,7 +1040,7 @@
               settings: {
                 slidesToShow: 1,
                 slidesToScroll: 1,
-                centerMode: true,
+                // centerMode: true,
               },
             },
           ],
