Изменение от Артура скрытые инпуты для отправки данных на сервер

--- a/src/index.html
+++ b/src/index.html
@@ -230,6 +230,10 @@
                 <form class="request__form_first" action="/ajax/get_quote_form/75612" method="post" id="webform-client-form-28577" accept-charset="UTF-8">
                   <input type="text" class="request__input" placeholder="Ваше имя" name="submitted[name]" id="edit-submitted-name--2"/>
                   <input type="tel" class="request__input" placeholder="Номер телефона" id="edit-submitted-phone--2" name="submitted[phone]"/>
+                  <input type="hidden" class="request__input" placeholder="Город" name="submitted[post_code]" value="заглушка город"/>
+                  <input type="hidden" class="request__input" placeholder="Компания" name="submitted[name_of_the_company]" value="заглушка компания"/>
+                  <input type="hidden" class="request__input" placeholder="Почта" name="submitted[e_mail]" value="заглушка почта"/>
+                  <input type="hidden" class="request__input" placeholder="Колличество сотрудников" name="submitted[topic]" value="заглушка Колличество сотрудников"/>
                   <button class="request__btn">Заказать Воду</button>
                 </form>
                 <div action="" class="request__form_second">
@@ -262,12 +266,16 @@
                     type="text"
                     class="request__input"
                     placeholder="Email"
+                    name="submitted[e_mail]"
                   />
                   <input
                     type="text"
                     class="request__input"
                     placeholder="Город"
+                    name="submitted[post_code]"
                   />
+                  <input type="hidden" class="request__input" placeholder="Компания" name="submitted[name_of_the_company]" value="заглушка компания"/>
+                  <input type="hidden" class="request__input" placeholder="Колличество сотрудников" name="submitted[topic]" value="заглушка Колличество сотрудников"/>
                   <!-- <div action="" class="request__form_second-mobile">
                                 <input type="radio" class="request__radioButton-mobile">
                                 <p class="request__form__text-mobile">Я подтверждаю свое согласие на обработку
@@ -291,6 +299,7 @@
                     type="text"
                     class="request__input"
                     placeholder="Компания"
+                    name="submitted[name_of_the_company]"
                   />
                   <input
                     type="tel"
@@ -301,18 +310,20 @@
                     type="text"
                     class="request__input"
                     placeholder="Почта"
+                    name="submitted[e_mail]"
                   />
                   <input
                     type="text"
                     class="request__input"
                     placeholder="Город"
+                    name="submitted[post_code]"
                   />
                   <input
                     type="text"
                     class="request__input"
                     placeholder="Количество сотрудников"
+                    name="submitted[topic]"
                   />
-
                   <!-- <div action="" class="request__form_second-mobile">
                                 <input type="radio" class="request__radioButton-mobile">
                                 <p class="request__form__text-mobile">Я подтверждаю свое согласие на обработку
@@ -688,6 +699,10 @@
             <form action="/ajax/get_quote_form/75612" method="post" accept-charset="UTF-8" class="order__form_first">
               <input type="text" class="order__input" placeholder="Ваше имя" name="submitted[name]"/>
               <input type="tel" class="order__input" placeholder="Номер телефона" name="submitted[phone]"/>
+              <input type="hidden" class="request__input" placeholder="Город" name="submitted[post_code]" value="заглушка город"/>
+              <input type="hidden" class="request__input" placeholder="Компания" name="submitted[name_of_the_company]" value="заглушка компания"/>
+              <input type="hidden" class="request__input" placeholder="Почта" name="submitted[e_mail]" value="заглушка почта"/>
+              <input type="hidden" class="request__input" placeholder="Колличество сотрудников" name="submitted[topic]" value="заглушка Колличество сотрудников"/>
               <button class="production__btn">Заказать Воду</button>
             </form>
             <form action="" class="order__form_second">
@@ -891,6 +906,10 @@
           <form action="/ajax/get_quote_form/75612" method="post" accept-charset="UTF-8" class="production__form">
             <input type="text" class="production__input" placeholder="Ваше имя" name="submitted[name]"/>
             <input type="tel" class="production__input" placeholder="Номер телефона" name="submitted[phone]"/>
+            <input type="hidden" class="request__input" placeholder="Город" name="submitted[post_code]" value="заглушка город"/>
+            <input type="hidden" class="request__input" placeholder="Компания" name="submitted[name_of_the_company]" value="заглушка компания"/>
+            <input type="hidden" class="request__input" placeholder="Почта" name="submitted[e_mail]" value="заглушка почта"/>
+            <input type="hidden" class="request__input" placeholder="Колличество сотрудников" name="submitted[topic]" value="заглушка Колличество сотрудников"/>
             <button class="production__btn">ОСТАВИТЬ ЗАЯВКУ</button>
           </form>
         </div>
